// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorPage> should handle actions as expected 1`] = `
Object {
  "payload": undefined,
  "type": "Color.nextColor",
}
`;

exports[`<ColorPage> should handle actions as expected 2`] = `
Object {
  "payload": undefined,
  "type": "Color.previousColor",
}
`;

exports[`<ColorPage> should inject props as expected 1`] = `
Object {
  "color": "red",
}
`;
